# drinkbot

./: .env.example  Cargo.toml  SECURITY.md
drinkbot/: Cargo.toml  README.md
drinkbot/src/: main.rs
etc/: drinkbot.service
