[package]
authors.workspace = true
description = "A Discord bot using TheCocktailDB API for drink suggestions"
edition = "2021"
license-file.workspace = true
name = "drinkbot"
version = "0.1.0"

[dependencies]
anyhow = "1.0.94"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
poise = "0.6.1"
thecocktaildb-rs = "0.1.0"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
